# inotify-zmq

./: .gitignore  CMakeLists.txt  Dockerfile  FilePushZmq.cpp  FilePushZmq.h  InotifyEventZmq.cpp  InotifyEventZmq.h  README.md  consumer.py  inotifymock.cpp  inotifymock.h  main.cpp  zmq.hpp
cmake/: FindZeroMQ.cmake
